SIS2-25: Configuration for slideshow backend

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--article--full.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--article--full.html.twig
@@ -99,7 +99,10 @@
             } %}
           {% endif %}
           <div class="article-page__description">
-            {{ content.body }}
+            {{ content.field_description }}
+          </div>
+          <div class="article-page__image">
+            {{ content.field_article_image }}
           </div>
           {{ content|without(['field_list_date', 'field_header', 'title','field_article_image']) }}
         </div>
