SIS2-134: Added Siteimprove script

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/layout/html.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/layout/html.html.twig
@@ -44,5 +44,6 @@
     {{ page }}
     {{ page_bottom }}
     <js-bottom-placeholder token="{{ placeholder_token|raw }}">
+    <script async src="https://siteimproveanalytics.com/js/siteanalyze_133886.js"></script>
   </body>
 </html>
