SIS2-208: Added newsletter signup form to footer + some basic styling

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/footer.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/footer.css
@@ -65,6 +65,12 @@
     }
   }
 
+  form.newsletter-form {
+    .field-item {
+      margin-bottom: 12px;
+    }
+  }
+
   &__bottom {
     position: relative;
     padding-top: 24px;
