--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/01-particles/input.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/01-particles/input.css
@@ -7,8 +7,8 @@
 .ui-autocomplete-input {
   display: block;
   width: 100%;
-  height: 40px;
-  padding: 0 40px 0 15px;
+  min-height: 55px;
+  padding: 0 30px;
   color: var(--theme-color);
   font-size: var(--base-font-size);
   font-family: var(--base-font-family);
@@ -18,7 +18,8 @@
   background-image: none;
 
   /* Reset unusual Firefox-on-Android default style; see https://github.com/necolas/normalize.css/issues/214 */
-  border: 1px solid var(--theme-input-border);
+  border: 1px solid var(--theme-background-color);
+  border-radius: 50px;
   appearance: none;
 
   &:focus {
@@ -39,7 +40,6 @@
     &[type="url"],
     &[type="tel"],
     &[type="number"] {
-      border-radius: 0;
       appearance: none;
     }
   }
