--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/header.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/header.css
@@ -80,9 +80,11 @@
 
     & .input {
       height: 100%;
+      min-height: 0;
       padding: 0;
       font-size: var(--base-font-size-small);
       border: none;
+      border-radius: 0;
     }
   }
 
