--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/theme/theme-green.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/theme/theme-green.css
@@ -6,8 +6,8 @@
 .theme-green {
   --theme-background-color: var(--color-green);
   --theme-color: #fff;
-  --theme-button-background-color: #fff;
-  --theme-button-color: var(--color-green);
+  --theme-button-background-color: var(--color-pink);
+  --theme-button-color: var(--color-purple);
   --theme-link-color: #ffefe5;
   --theme-divider-background-color: #ffefe5;
   --theme-accordion-color: var(--color-white);
