Upgraded Entity Overview to v2

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/form/form--entity-overview-search-page.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/form/form--entity-overview-search-page.html.twig
@@ -26,7 +26,7 @@
               "{{ element.keyword }}"
             </h3>
             <div class="search-page__count">
-              {{ element.number_of_results }}
+              {{ element['content']['total'] }}
             </div>
           </div>
         </div>
