--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/block/block--inline-block--search-field.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/block/block--inline-block--search-field.html.twig
@@ -34,7 +34,7 @@
       <input {{ create_attribute().addClass('input')
         .setAttribute('type', 'search').setAttribute('aria-label', 'Search'|t).setAttribute('required','required')
         .setAttribute('placeholder', 'Search the entire site'|t)
-        .setAttribute('name', 'term')
+        .setAttribute('name', 'text')
         .setAttribute('id', 'js-seachfield-search-input') }}>
       <button {{ create_attribute().setAttribute('type', 'submit').addClass('searchfield-search__submit') }}>
         {% include '@reusable-component/svg-icon.twig' with {
