--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/form/form--entity-overview-filter-form.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/form/form--entity-overview-filter-form.html.twig
@@ -32,7 +32,7 @@
           </span>
         </div>
         <div class="overview-form__search-input">
-          {{ element['search'].keyword }}
+          {{ element['facets'].text }}
           {{ element['search'].search }}
         </div>
       </div>
