--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/searchfield.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/searchfield.css
@@ -6,9 +6,9 @@
 
     &__input-field {
       position: relative;
-      margin: auto !important;
       width: 50%;
       height: 42px;
+      margin: 0 auto;
       padding: 11px 50px 11px 20px;
       background: var(--color-white);
       border: 1px solid var(--color-blue);
@@ -16,6 +16,7 @@
 
       & .input {
         height: 100%;
+        min-height: 100%;
         padding: 0;
         font-size: var(--base-font-size-small);
         border: none;
