SIS2-262: Removed padding top and bottom on modal layout block edit form

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/base/modal.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/base/modal.css
@@ -34,6 +34,11 @@
       }
     }
   }
+
+  .section-form {
+    padding-top: 0 !important;
+    padding-bottom: 0 !important;
+  }
 }
 
 .layout-builder .layout-builder__add-section {
