--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/01-particles/input.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/01-particles/input.css
@@ -18,7 +18,7 @@
   background-image: none;
 
   /* Reset unusual Firefox-on-Android default style; see https://github.com/necolas/normalize.css/issues/214 */
-  border: 1px solid var(--theme-background-color);
+  border: 1px solid var(--theme-input-border);
   border-radius: 50px;
   appearance: none;
 
