SIS2-170: Adjustments after QA I

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/01-particles/button.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/01-particles/button.css
@@ -25,6 +25,11 @@ a.button {
   border-radius: 50px;
   cursor: pointer;
 
+   a {
+     text-decoration: none;
+     color: white;
+   }
+
   &[disabled],
   [disabled] & {
     opacity: .6;
