--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/article-page.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/article-page.css
@@ -1,4 +1,7 @@
 .article-page {
+  &__image {
+    text-align: center;
+  }
   &__hero {
     width: 100%;
     height: 440px;
@@ -159,10 +162,13 @@
     margin: 0;
     padding: 0;
   }
+}
 
-  .article-content-wrapper {
-    img {
-      width: 50%;
-    }
+.article-content-wrapper {
+  h2 {
+    font-size: var(--base-font-size-xxlarge) !important;
+  }
+  h3 {
+    font-size: var(--base-font-size-xlarge) !important;
   }
 }
