--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/inspiration-overview.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/inspiration-overview.css
@@ -94,6 +94,16 @@
     font-family: var(--base-font-family);
     background-color: var(--color-primary);
 
+    &.clickable {
+      &:hover {
+        opacity: 0.5;
+       }
+    }
+    a {
+      text-decoration: none;
+      color: #fff !important;
+    }
+
     &--news {
       background-color: var(--color-red);
     }
