--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--article--list.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--article--list.html.twig
@@ -76,9 +76,11 @@
     <a href="{{ url }}" class="inspiration-overview__item-link">
       <div class="inspiration-overview__image">
         {{ content.field_list_media }}
-        <div class="inspiration-overview__type">
-          {{ node.field_article_type.entity.name.value }}
-        </div>
+        <a href="/{{ url|split('/')[1] }}">
+          <div class="inspiration-overview__type">
+            {{ node.field_article_type.entity.name.value }}
+          </div>
+        </a>
       </div>
       <div class="inspiration-overview__content">
         {% if content.field_class[0]|length > 0 %}
