--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--blog-post--full.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--blog-post--full.html.twig
@@ -111,10 +111,11 @@
         {% endif %}
         {% if other_writers %}
           <h3>Andre Skribenter</h3>
-            {% for writer in other_writers %}
+            {% for writer in other_writers|slice(0, 3) %}
               {{ writer }}
             {% endfor %}
           {% endif %}
+        {% if all_writers|length > 0 %}
         <div class="view-all-writers-link">
           <h4>Se alle skribenter</h4>
           {% include '@reusable-component/svg-icon.twig' with {
@@ -122,9 +123,11 @@
             'svgIconName': 'carret'
           } %}
         </div>
+        {% endif %}
       </div>
     </div>
 
+    {% if all_writers %}
     <div class="blog-post--view-all-writers">
       <div class="blog-post--view-all-writers--title">
         <h3>Alle skribenter</h3>
@@ -145,6 +148,7 @@
         {% endfor %}
       </div>
     </div>
+    {% endif %}
 
     {% if other_blog_posts %}
     <div class="news-page__latest section section--spacing-bottom-none">
