--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/user/user--full.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/user/user--full.html.twig
@@ -33,6 +33,7 @@
       </div>
       <div class="col-md-8 col-lg-8">
         <h2>{{ content.field_full_name }}</h2>
+        <h5>{{ content.field_summary }}</h5>
         <div>{{ content.field_description }}</div>
         <div>{{ content.field_contact_information }}</div>
       </div>
