--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/layout/page--organizations.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/layout/page--organizations.html.twig
@@ -1,35 +1,39 @@
 {{ attach_library('sis/organization-page') }}
+{{ attach_library('sis/section-bg-graphics') }}
 
-<div class="container">
-  {% include '@reusable-component/page-title.twig' with {
-    'attributes': create_attribute().addClass('organization-page__title'),
-    'title': page.title,
-  } %}
-  <div class="organization-page__description">
-    {{ page.description }}
-  </div>
-  {{ page.content }}
-  <div class="article-page__related section section--spacing-bottom-none">
-    <div class="row">
-      <div class="col-xs-12 col-sm-8 col-md-8">
-        <div class="article-page__related-header">
-          <h3>{{ atom_str('organization-page-related-headline') }}</h3>
-          <p>{{ atom_str('organization-page-related-description') }}</p>
+<section class="section section--spacing-top-medium section--spacing-bottom-medium section--background-graphics">
+  <img src="/sites/skoven-i-skolen.dk/themes/custom/sis/dist/images/wind.svg" class="section-bg-graphics__image section-bg-graphics__image--wind section-bg-graphics__position--right">
+  <div class="container">
+    {% include '@reusable-component/page-title.twig' with {
+      'attributes': create_attribute().addClass('organization-page__title'),
+      'title': page.title,
+    } %}
+    <div class="organization-page__description">
+      {{ page.description }}
+    </div>
+    {{ page.content }}
+    <div class="article-page__related section section--spacing-bottom-none">
+      <div class="row">
+        <div class="col-xs-12 col-sm-8 col-md-8">
+          <div class="article-page__related-header">
+            <h3>{{ atom_str('organization-page-related-headline') }}</h3>
+            <p>{{ atom_str('organization-page-related-description') }}</p>
+          </div>
         </div>
-      </div>
-      <div class="col-xs-12 col-sm-4 col-md-4">
-        <div class="swiper-navigation">
-          <div class="swiper-button-prev"></div>
-          <div class="swiper-button-next"></div>
+        <div class="col-xs-12 col-sm-4 col-md-4">
+          <div class="swiper-navigation">
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
+          </div>
         </div>
-      </div>
-      <div class="col-xs-12">
-        <div class="article-page__related-items js-article-page__related-items swiper">
-          <div class="swiper-wrapper">
-            {{ page.content_slideshow }}
+        <div class="col-xs-12">
+          <div class="article-page__related-items js-article-page__related-items swiper">
+            <div class="swiper-wrapper">
+              {{ page.content_slideshow }}
+            </div>
           </div>
         </div>
       </div>
     </div>
   </div>
-</div>
+</section>
