--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/base/typography.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/base/typography.css
@@ -16,23 +16,39 @@ h6 {
 }
 
 h1 {
-  font-size: var(--base-font-size-xxxxlarge);
+  font-size: var(--base-font-size-xxxlarge);
   line-height: 1;
+
+  @media (--viewport-sm-min) {
+    font-size: var(--base-font-size-xxxxlarge)
+  }
 }
 
 h2 {
-  font-size: var(--base-font-size-xxxlarge);
+  font-size: var(--base-font-size-xxlarge);
   line-height: 1.2;
+
+  @media (--viewport-sm-min) {
+    font-size: var(--base-font-size-xxxlarge)
+  }
 }
 
 h3 {
-  font-size: var(--base-font-size-xxlarge);
+  font-size: var(--base-font-size-xlarge);
   line-height: 1.2;
+
+  @media (--viewport-sm-min) {
+    font-size: var(--base-font-size-xxlarge)
+  }
 }
 
 h4 {
-  font-size: var(--base-font-size-xlarge);
+  font-size: var(--base-font-size-large);
   line-height: 1.2;
+
+  @media (--viewport-sm-min) {
+    font-size: var(--base-font-size-xlarge)
+  }
 }
 
 h5 {
