SIS2-299: Fix responsive header height + responsive meta menu display + responsive padding-top on body element

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/meta-menu.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/meta-menu.css
@@ -7,7 +7,7 @@
   display: none;
   background-color: var(--color-blue-light);
 
-  @media (--viewport-md-min) {
+  @media (--viewport-lg-min) {
     display: block;
   }
 
