--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/base/base.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/base/base.css
@@ -29,7 +29,11 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 
-  @media (--viewport-md-min) {
+  @media (--viewport-ms-min) {
+    padding-top: var(--header-height);
+  }
+
+  @media (--viewport-lg-min) {
     padding-top: calc(var(--header-height) + var(--meta-menu-height));
   }
 
