SIS2-300: Added max-width 100% and height auto on article-content-wrapper img tags

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/article-page.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/article-page.css
@@ -15,6 +15,13 @@
     }
   }
 
+  .article-content-wrapper {
+    img {
+      max-width: 100%;
+      height: auto;
+    }
+  }
+
   &__title {
     margin-bottom: 24px;
   }
