SIS2-302: Made inspiration item type clickable

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/facts-box.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/facts-box.css
@@ -106,7 +106,14 @@
     }
 
     &__type {
-      font-size: var(--base-font-size-small);
+      a {
+        font-size: var(--base-font-size-small);
+        text-decoration: none;
+
+        &:hover {
+          text-decoration: underline;
+        }
+      }
     }
 
     &__link {
