--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--article--full.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--article--full.html.twig
@@ -259,25 +259,59 @@
             </div>
           </div>
         {% endif %}
-        {% if node.field_media_downloads[0] or node.field_files[0] %}
+        {% if node.field_media_downloads[0] or node.field_files[0] or node.field_copy_sheet[0] or node.field_materials[0 ]%}
           <div class="facts-box">
             <div class="facts-box__title">
               Filer
             </div>
             <div class="facts-box__content">
-              {% if node.field_media_downloads[0] %}
-                {% for file in node.field_media_downloads %}
-                  <div class="facts-box__content-item">
-                    <a href="{{ file_url(file.entity.field_media_document.entity.uri.value) }}" target="_blank">{{ file.entity.name.value }}</a>
-                  </div>
+              {% if node.field_materials[0] %}
+                <strong>Materialer:</strong><br>
+                <ul>
+                {% for file in node.field_materials %}
+                  <li>
+                    <div class="facts-box__content-item">
+                      <a href="{{ file_url(file.entity.field_media_document.entity.uri.value) }}" target="_blank">{{ file.entity.name.value }}</a>
+                    </div>
+                  </li>
                 {% endfor %}
+                </ul><br>
+              {% endif %}
+              {% if node.field_media_downloads[0] %}
+                <strong>Media:</strong><br>
+                <ul>
+                {% for file in node.field_media_downloads %}
+                  <li>
+                    <div class="facts-box__content-item">
+                      <a href="{{ file_url(file.entity.field_media_document.entity.uri.value) }}" target="_blank">{{ file.entity.name.value }}</a>
+                    </div>
+                  </li>
+                {% endfor %}
+               </ul><br>
+              {% endif %}
+              {% if node.field_copy_sheet[0] %}
+                <strong>Kopiark:</strong><br>
+                <ul>
+                {% for file in node.field_copy_sheet %}
+                  <li>
+                    <div class="facts-box__content-item">
+                      <a href="{{ file_url(file.entity.field_media_document.entity.uri.value) }}" target="_blank"> {{ file.entity.name.value|slice(0, 40) }}</a>
+                    </div>
+                  </li>
+                {% endfor %}
+                </ul><br>
               {% endif %}
               {% if node.field_files[0] %}
+                <strong>Filer:</strong><br>
+                <ul>
                 {% for file in node.field_files %}
-                  <div class="facts-box__content-item">
-                    <a href="{{ file_url(file.entity.uri.value) }}" target="_blank"> {{ file.entity.filename.value }}</a>
-                  </div>
+                  <li>
+                    <div class="facts-box__content-item">
+                      <a href="{{ file_url(file.entity.uri.value) }}" target="_blank"> {{ file.entity.filename.value }}</a>
+                    </div>
+                  </li>
                 {% endfor %}
+                </ul><br>
               {% endif %}
             </div>
           </div>
