SIS2-249: Changed profile fields to not be mandatory, removed top image paragraph field and top graphics field and added new top image field

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/profile--full.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/profile--full.html.twig
@@ -34,9 +34,9 @@
   'clearfix',
 ] %}
 <div{{ attributes.addClass(classes) }}>
-  {% if content.field_organization_top_image[0] %}
+  {% if content.field_top_image[0] %}
     <div class="profile__hero">
-      {{ content.field_organization_top_image }}
+      {{ content.field_top_image }}
     </div>
   {% endif %}
   {{ breadcrumb }}
