SIS2-249: Added section background graphics option + markup and styling to profile pages

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/profile.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/profile.css
@@ -3,6 +3,17 @@
  * Profile.
  */
 .profile {
+  &__hero {
+    img {
+      display: block;
+    }
+  }
+
+  &__content {
+    padding-top: 0;
+    padding-bottom: 0;
+  }
+
   &__page-title {
     margin-bottom: 24px;
   }
