SIS2-271: Removed overflow hidden from sections with torn edges

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/section-bg-graphics.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/02-molecules/section-bg-graphics.css
@@ -104,7 +104,7 @@
   }
 }
 
-.section--background-graphics {
+.section--background-graphics:not(.theme) {
   @media (--viewport-sm-min) {
     overflow: hidden;
   }
