--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/inspiration-overview.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/inspiration-overview.css
@@ -249,9 +249,26 @@
 
   &__term {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(1, 1fr);
     grid-gap: var(--container-spacing-mobile);
 
+    @media (--viewport-ms-min) {
+      grid-template-columns: repeat(2, 1fr);
+    }
+
+    @media (--viewport-md-min) {
+      grid-template-columns: repeat(3, 1fr);
+      grid-gap: var(--container-spacing);
+    }
+
+    @media (--viewport-md-min) {
+      grid-template-columns: repeat(3, 1fr);
+      grid-gap: var(--container-spacing);
+    }
+
+    @media (--viewport-lg-min) {
+      grid-template-columns: repeat(4, 1fr);
+    }
   }
 }
 
