SIS2-298: Center footer logo on mobile devices

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/footer.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/footer.css
@@ -144,6 +144,16 @@
     }
 
     &-logo {
+      display: flex;
+
+      .logo {
+        margin-left: auto;
+
+        @media (--viewport-md-min) {
+          margin-left: 0;
+        }
+      }
+
       .logo__image {
         height: 41px;
         margin: 0;
