SIS2-301: Added submit: true, to AutoCompleteJS options + changed responsive styling to search page title and description

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/search-page.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/search-page.css
@@ -53,11 +53,27 @@
   }
 
   &__title {
-    font-size: var(--base-font-size-xxxxxlarge);
+    font-size: var(--base-font-size-xxlarge);
+
+    @media (--viewport-ms-min) {
+      font-size: var(--base-font-size-xxxlarge);
+    }
+
+    @media (--viewport-sm-min) {
+      font-size: var(--base-font-size-xxxxlarge);
+    }
   }
 
   &__description {
-    font-size: var(--base-font-size-xxlarge);
+    font-size: var(--base-font-size-large);
+
+    @media (--viewport-ms-min) {
+      font-size: var(--base-font-size-xlarge);
+    }
+
+    @media (--viewport-sm-min) {
+      font-size: var(--base-font-size-xxlarge);
+    }
   }
 }
 
