SIS2-324: Fixed fakta box with extra class.

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--article--full.html.twig
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/templates/content/node--article--full.html.twig
@@ -190,7 +190,7 @@
               </div>
               <div class="facts-box__content">
                 {% if factboxe.entity.field_factbox_subtitle.value %}
-                  <div class="facts-box__content-item">
+                  <div class="facts-box__content-item--faktabox">
                     <div class="facts-box__content-item-label">
                       {{ factboxe.entity.field_factbox_subtitle.value }}
                     </div>
