Changed variable --color-green

--- a/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/base/variables.css
+++ b/webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/base/variables.css
@@ -31,7 +31,7 @@
   --color-orange: #f69e4b;
   --color-orange-dark: #e08a39;
   --color-apricot: #f0846e;
-  --color-green: #008c5d;
+  --color-green: #007950;
   --color-green-dark: #1c6153;
 
   /* Default theme-colors
